Cobbler CHANGELOG

- - 1.6.6
- (BUGF) fix typo in /usr/bin/cobbler-register
- (NOTE: koan changelog in subdirectory is no longer maintained)
- (BUGF) fix error message when wrong virt ram value is applied
- (FEAT) koan now partially works in source code form on EL 2

- - 1.6.5
- (BUGF) don't use json on python x<=2.3 since we know it's simplejson x<2.0, which has unicode issues
- (BUGF) don't add duplicate interfaces in koan if vlan tagged
- (FEAT) support F-11 imports
- (BUGF) pair PAE and non-PAE content in imports better 
- (BUGF) don't try to scp /etc/cobbler/*.ks on replicate, this is an old path
- (BUGF) set proper umask on .mtime files
- (BUGF) fix koan error with unspecified arch using --kexec
- (BUGF) don't use --onboot=on in network config for kickstart for RHEL 3.

- Fri May 8 2009 - 1.6.4
- (BUGF) empty nameserver search paths now don't break resolv.conf
- (BUGF) unicode fix for --template-files feature
- (BUGF) a general and hopefully ultimate unicode fix
- (BUGF) mod python input fix for repo/profile associations in webapp
- (BUGF) change "hostname" to "option hostname" in dhcp.template
- (BUGF) bonding interface setup for RHEL4 now works
- (BUGF) generate DHCP info even if netboot is disabled
- (BUGF) Change to network_config snippet to ignore bond masters to prevent anaconda failures when MAC addresses are not specified
- (BUGF) fix to CLI rename deleting subobjects via cobblerd (important!)
- (BUGF) fix blender cache problem with using dnsnames instead of record names (ISC DHCP management)
- (BUGF) quote host name in stock ISC template
- (BUGF) don't append _eth0 to names in ISC config file, only if not eth0

- XXX - 1.6.3
- (BUGF) import with datestamp 0 when .discinfo is not found, do not crash
- (BUGF) various fixes to "cobbler report" when using non-standard formats
- (BUGF) rename with same name does not delete
- (BUGF) Fix for traceback when generating DHCP config and the bonding_master interface does not exist.