@@ -197,10 +197,8 @@ test "x$RPM_BUILD_ROOT" != "x" && rm -rf $RPM_BUILD_ROOT
 %config(noreplace) /etc/cobbler/cheetah_macros
 %dir %{python_sitelib}/cobbler
 %dir %{python_sitelib}/cobbler/modules
-%dir %{python_sitelib}/cobbler/server
 %dir %{python_sitelib}/cobbler/webui
 %{python_sitelib}/cobbler/*.py*
-%{python_sitelib}/cobbler/server/*.py*
 %{python_sitelib}/cobbler/modules/*.py*
 %{python_sitelib}/cobbler/webui/*.py*
 %{_mandir}/man1/cobbler.1.gz
